--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "g3l",
   "version": "2.0.3",
-  "description": "Git Commit Easy",
+  "description": "Git is easy, github cli is easy but g3l easiest git cli in the w0rld!",
   "main": "index.js",
   "repository": {
     "type": "git",
