--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "3x3c": "^1.0.2",
     "async": "^2.0.1",
     "br4nch": "^1.0.5",
+    "bugsnag": "^1.8.0",
     "c0mm1t": "^1.0.8",
     "commander": "^2.9.0",
     "prompt": "^1.0.0",
