--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "bugsnag": "^1.8.0",
     "c0mm1t": "^1.0.8",
     "commander": "^2.9.0",
+    "cr34t3": "^1.0.15",
     "prompt": "^1.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "update-notifier": "^1.0.2"
   }
 }
