--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "bugsnag": "^1.8.0",
     "c0mm1t": "^1.0.8",
     "commander": "^2.9.0",
-    "cr34t3": "^1.0.19",
+    "cr34t3": "^1.0.20",
+    "node-emoji": "^1.3.1",
     "prompt": "^1.0.0",
     "underscore": "^1.8.3",
     "update-notifier": "^1.0.2"
