--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "homepage": "https://github.com/cagataycali/g3l#readme",
   "dependencies": {
-    "1n1t": "^1.0.12",
+    "1n1t": "^1.0.13",
     "3x3c": "^1.0.2",
     "async": "^2.0.1",
     "br4nch": "^1.0.5",
     "bugsnag": "^1.8.0",
     "c0mm1t": "^1.0.9",
+    "colors": "^1.1.2",
     "commander": "^2.9.0",
     "cr34t3": "^1.0.22",
     "node-emoji": "^1.3.1",
