:octocat: Added tags, new improvements :bookmark: :sparkles: :package:

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "git",
     "commit",
     "npm",
-    "node"
+    "node",
+    "gel",
+    "git commit",
+    "git cli",
+    "git cli tool"
   ],
   "author": "Çağatay Çalı",
   "license": "ISC",
