--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "br4nch": "^1.0.5",
     "bugsnag": "^1.8.0",
     "c0mm1t": "^1.0.20",
+    "cli-table": "^0.3.1",
     "cmdify": "0.0.4",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
