--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "inquirer": "^1.1.3",
     "m4g1c": "^1.0.8",
     "node-emoji": "^1.4.1",
+    "opn": "^4.0.2",
     "prompt": "^1.0.0",
     "underscore": "^1.8.3",
     "update-notifier": "^1.0.2"
