--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "commander": "^2.9.0",
     "cr34t3": "^1.0.31",
     "inquirer": "^1.1.3",
+    "is-git-url": "^0.2.3",
     "m4g1c": "^1.0.8",
     "node-emoji": "^1.4.1",
     "opn": "^4.0.2",
