--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cagataycali/g3l.git"
+    "url": "git+https://github.com/svtek/g3l.git"
   },
   "bin": {
     "g3l": "./index.js"
@@ -24,9 +24,9 @@
   "author": "Çağatay Çalı",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cagataycali/g3l/issues"
+    "url": "https://github.com/svtek/g3l/issues"
   },
-  "homepage": "https://github.com/cagataycali/g3l#readme",
+  "homepage": "https://github.com/svtek/g3l#readme",
   "dependencies": {
     "1n1t": "^1.0.24",
     "3x3c": "^1.0.2",
