Hot bug fix for commit

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "3x3c": "^1.0.2",
     "async": "^2.0.1",
     "br4nch": "^1.0.5",
-    "c0mm1t": "^1.0.37",
+    "c0mm1t": "^1.0.38",
     "cli-table": "^0.3.1",
     "cmdify": "0.0.4",
     "colors": "^1.1.2",
@@ -43,6 +43,7 @@
     "m4g1c": "^1.0.10",
     "node-emoji": "^1.4.1",
     "opn": "^4.0.2",
+    "path-exists": "^3.0.0",
     "prompt": "^1.0.0",
     "underscore": "^1.8.3",
     "update-notifier": "^1.0.2"
