--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "cr34t3": "^1.0.31",
+    "global-modules": "^0.2.3",
+    "ignoring-watcher": "^1.1.0",
     "inquirer": "^1.1.3",
     "is-git-url": "^0.2.3",
     "m4g1c": "^1.0.11",
     "node-emoji": "^1.4.1",
     "node-notifier": "^4.6.1",
     "opn": "^4.0.2",
+    "pm2": "^2.0.12",
     "prompt": "^1.0.0",
     "underscore": "^1.8.3",
     "update-notifier": "^1.0.2"
