🎉  Change AutoCommit.js 📖

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "1n1t": "^1.0.24",
     "3x1st": "^1.0.3",
     "3x3c": "^1.0.2",
+    "analytics-node": "^2.1.0",
     "async": "^2.0.1",
     "br4nch": "^1.0.5",
     "c0mm1t": "^1.0.44",
@@ -43,6 +44,7 @@
     "commander": "^2.9.0",
     "cr34t3": "^1.0.31",
     "global-modules": "^0.2.3",
+    "h0m3": "^1.0.1",
     "ignoring-watcher": "^1.1.0",
     "inquirer": "^1.1.3",
     "is-git-url": "^0.2.3",
